# medical-imaging-platform

./: .gitignore  README.md  docker-compose.dev.yml  test_orthanc_e2e.py  test_stow_roundtrip.py  test_sync_upload.py
auth-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
auth-service/app/: __init__.py  main.py
auth-service/app/api/v1/: router.py
auth-service/app/core/: config.py  errors.py  logging.py  security.py
auth-service/app/db/: base.py  session.py
auth-service/app/db/migrations/: env.py
auth-service/app/dependencies/: __init__.py  auth.py
auth-service/app/middleware/: request_id.py
auth-service/app/models/: __init__.py  user.py
auth-service/app/repositories/: __init__.py  user_repository.py
auth-service/app/schemas/: __init__.py  admin.py  auth.py
auth-service/app/services/: auth_service.py  password_policy.py
auth-service/scripts/: create_admin.py
auth-service/tests/: test_security.py
medical-imaging-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
medical-imaging-service/app/: __init__.py  main.py
medical-imaging-service/app/core/config/: dicomweb_config.py  settings.py
medical-imaging-service/app/core/dependencies/: __init__.py  auth.py  db.py  providers.py
medical-imaging-service/app/core/errors/: __init__.py  exceptions.py  (+1 more)
medical-imaging-service/app/routes/: api.py  health.py
medical-imaging-service/tests/unit/: test_crypto.py  test_query_builders.py
(+92 files in other folders)
