[project]
name = "auth-service"
version = "0.1.0"
description = "Authentication service — user registration, login, JWT issuing"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.13.3",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.2.0",
    "python-multipart==0.0.12",
    "email-validator==2.2.0",
    "httpx==0.27.2",
    "structlog==24.4.0",
    "orjson==3.10.11",
    "tenacity==9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "ruff==0.7.4",
    "mypy==1.13.0",
    "httpx==0.27.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "C4", "RUF"]
ignore = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
